--- a/microservice-spring-data/src/main/resources/application.yml
+++ b/microservice-spring-data/src/main/resources/application.yml
@@ -4,6 +4,7 @@ server.port: 8081
 
 management.server.port: 8082
 
+spring.data.rest.basePath: /api
 ---
 spring.profiles: docker
 spring:
@@ -14,8 +15,6 @@ spring:
       keyspace-name: betterbotz
       local-datacenter: dc1
       schema-action: create-if-not-exists
-    rest:
-      basePath: /api
 ---
 spring.profiles: kubernetes
 spring.cloud.kubernetes.enabled: true
