--- a/microservice-spring-data/src/main/resources/application.yml
+++ b/microservice-spring-data/src/main/resources/application.yml
@@ -5,6 +5,7 @@ server.port: 8081
 management.server.port: 8082
 
 spring.data.rest.basePath: /api
+spring.data.cassandra.keyspace-name: betterbotz
 ---
 spring.profiles: docker
 spring:
@@ -12,7 +13,6 @@ spring:
     cassandra:
       port: 9042
       contact-points: host.docker.internal
-      keyspace-name: betterbotz
       local-datacenter: dc1
       schema-action: create-if-not-exists
 ---
