--- a/pom.xml
+++ b/pom.xml
@@ -31,7 +31,7 @@
 		<spring-data-rest.version>3.3.0.RELEASE</spring-data-rest.version>
 		<spring-cloud-kubernetes.version>1.1.3.RELEASE</spring-cloud-kubernetes.version>
 
-		<cassandra-java-driver.version>4.6.1</cassandra-java-driver.version>
+		<cassandra-java-driver.version>4.8.0</cassandra-java-driver.version>
 
 		<!-- Third Parties -->
 		<common-fileupload>1.3.3</common-fileupload>
@@ -126,6 +126,11 @@
 				<groupId>com.datastax.oss</groupId>
 				<artifactId>java-driver-mapper-runtime</artifactId>
 				<version>${cassandra-java-driver.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>com.datastax.oss</groupId>
+				<artifactId>native-protocol</artifactId>
+				<version>1.4.11</version>
 			</dependency>
 
 			<!-- Rest API -->
