--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -2,9 +2,10 @@ image: gitpod/workspace-full
 tasks:
   - init: mvn package
     command: . setup.sh && java -jar target/spring-data-example-1.0.0-SNAPSHOT.jar
+  - command: gp preview $(gp url 8081)/swagger-ui/
 ports:
   - port: 8081
-    onOpen: open-browser
+    onOpen: ignore
 github:
   prebuilds:
     master: true
