change url path to redirect to swagger

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,5 +4,5 @@ server.port: 8081
 
 management.server.port: 8082
 
-spring.data.rest.basePath: /api
+spring.data.rest.basePath: /
 spring.data.cassandra.keyspace-name: betterbotz
